--- a/index.html
+++ b/index.html
@@ -1,100 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Brian's Porfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-      * {
-        border: 1px double black;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to Brian's <i>Developer</i> Website</h1>
-      <nav id="global-header">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact Me</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section id="home">
-        <h2>Hello! I'm Brian Mendez</h2>
-        <p>Introduction about you that hooks the audience...</p>
-        <img src="path_to_your_image" alt="A photo of Brian" />
-        <button>Contact Me</button>
-      </section>
 
-      <section id="about">
-        <h2>About Me</h2>
-        <pre>Testing whitespaces enabled     estes</pre>
+<head>
+  <meta charset="UTF-8" />
+  <title>Brian's Porfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    * {
+      border: 1px double black;
+    }
+  </style>
+</head>
 
-        <ol>
-          <h3>Work Experience</h3>
-          <li>Better Times Tutoring</li>
-          <li>Tree of Knowledge Tutoring Center</li>
-        </ol>
+<body>
+  <header>
+    <h1>Welcome to Brian's <i>Developer</i> Website</h1>
+    <nav id="global-header">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="home">
+      <h2><code>Hello!</code>I'm Brian Mendez</h2>
+      <p>Introduction about you that hooks the audience...</p>
+      <img src="path_to_your_image" alt="A photo of Brian" />
+      <br>
+      <button>Contact Me</button>
+    </section>
 
-        <table>
-          <h3>Skills</h3>
-          <tr>
-            <th>Front End</th>
-            <th>Back End</th>
-            <th>Soft Skills</th>
-          </tr>
-          <tr>
-            <td>HTML</td>
-            <td>JAVA</td>
-            <td>Good with others</td>
-          </tr>
-          <tr>
-            <td>February</td>
-            <td>$80</td>
-          </tr>
-        </table>
-      </section>
+    <section id="about">
+      <h2>About Me</h2>
+      <pre>Brief description of who I am...</pre>
+      <audio controls>
+        <source src='' type=''>
+        <source src='' type=''>
+        Your browser does not support the audio tag.
+      </audio>
 
-      <section id="projects">
-        <h2>My Projects</h2>
-        <div>
-          <h3>Project Name</h3>
-          <video src="path_to_video" controls></video>
-          <p>Project description<span style="color:blue;font-weight:bold">frontend</span>...</p>
-        </div>
-      </section>
+      <div class="skill-category">
+        <img src="frontend-dev-img.jpg" alt="Frontend development image">
+        <caption>Frontend Development</caption>
+        <p>Strong knowledge in HTML, CSS, JavaScript, and frontend frameworks like React and Vue. Experienced in
+          building responsive and user-friendly interfaces, implementing complex features, and improving website
+          performance.</p>
+      </div>
 
-      <section id="contact">
-        <h2>Contact Me</h2>
-        <form action="/action_page.php">
+      <div class="skill-category">
+        <img src="backend-dev-img.jpg" alt="Backend development image">
+        <caption>Backend Development</caption>
+        <p>Proficient in Node.js, Express, and Python with Django. Able to design and implement APIs, manage databases,
+          and build secure and scalable server-side applications.</p>
+      </div>
+
+      <div class="skill-category">
+        <img src="software-apis-img.jpg" alt="Software and APIs image">
+        <caption>Software & APIs</caption>
+        <p>Experienced in integrating various APIs, utilizing cloud platforms, and working with software like Postman
+          and Git.</p>
+      </div>
+
+      <div class="skill-category">
+        <img src="soft-skills-img.jpg" alt="Soft skills image">
+        <caption>Soft Skills</caption>
+        <p>Effective communicator, great team player, and a strong problem solver. Comfortable working in agile
+          development teams and handling multiple tasks and deadlines.</p>
+      </div>
+
+      <table>
+        <h3>Education and Experience</h3>
+        <colgroup>
+          <col span="3" style="background-color:lightsteelblue">
+        </colgroup>
+        <tr>
+          <th><b>2019</b></th>
+          <th><b>2021-2023</b></th>
+          <th><b>Present</b></th>
+        </tr>
+        <tr>
+          <td>El Camino Real Charter H.S <br> <em>Woodland Hills, CA</em></td>
+          <td>B.S, Electrical and Computer Engineering <br> <em>University of California, San Diego</em></td>
+          <td>Better Times Tutoring Inc.<br> <em>San Diego, CA</em></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Tree of Knowledge Tutoring Center<br><em>Mission Hills, CA</em></td>
+          <td></td>
+        </tr>
+      </table>
+
+      <details>
+        <summary>Why I do what I do?</summary>
+        <p>Creation, Building, and Exceeding</p>
+      </details>
+    </section>
+
+    <section id="projects">
+      <h2>My Projects</h2>
+      <video width="320" height="240" alt='Video Overview on Projects' controls>
+        <source src='' type=''>
+        <source src='' type=''>
+        Your browser does not support the video tag.
+      </video>
+      <figure>
+        <h3>Better Times Tutoring</h3>
+        <iframe width="400" height="200" src="https://bettertimestutoring.com/"
+          title="Better Times Tutoring Website"></iframe>
+        <p>Project description...</p>
+        <button>Learn More</button>
+      </figure>
+      <template>
+        <h3>Project Name</h3>
+        <picture>
+          <source media="(min-width:650px)" srcset=''>
+          <source media="(min-width:465px)" srcset=''>
+          <img src='' alt='Project 2'>
+          <figcaption>Project 2</figcaption>
+        </picture>
+        <p>Project description...</p>
+        <button>Learn More</button>
+      </template>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <form>
+        <fieldset>
+          <legend>Reach Out:</legend>
           <label for="fname">First name:</label>
-          <input type="text" id="fname" name="fname"/><br/><br/>
+          <input type="text" id="fname" name="fname" /> <br> <br>
           <label for="lname">Last name:</label>
-          <input type="text" id="lname" name="lname"/><br/><br/>
-          <input type="submit" value="Submit"/>
-        </form>
-      </section>
-    </main>
+          <input type="text" id="lname" name="lname" /> <br> <br>
+          <input type="submit" value="Submit" />
+        </fieldset>
+      </form>
 
-    <hr/>
+      <h2>Quick Question</h2>
+      <form>
+        <label for="inquiry">Type of Inquiry:</label>
+        <select id="inquiry" name="inquiry">
+          <optgroup label="Technical">
+            <option value="bug-report">Bug Report</option>
+            <option value="feature-request">Feature Request</option>
+          </optgroup>
+          <optgroup label="Non-Technical">
+            <option value="general-question">General Question</option>
+            <option value="career-opportunity">Career Opportunity</option>
+          </optgroup>
+        </select>
+        <br>
+        <textarea>Let me know here.</textarea>
+        <br>
+        <label for="lname">What browser are you viewinig this on: </label>
+          <input list="browsers" name="browser" id="browser"> <br> <br>
+          <datalist id="browsers">
+            <option value="Edge">
+            <option value="Firefox">
+            <option value="Chrome">
+            <option value="Opera">
+            <option value="Safari">
+          </datalist>
+          <input type="submit" value="Submit" />
+      </form>
+    </section>
 
-    <footer>
-      <p>Find me here:</p>
-      <nav id="social-footer">
-        <ul>
-          <li>
-            <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/"
-              >LinkedIn</a
-            >
-          </li>
-          <li><a href="https://github.com/B1mendez">Github</a></li>
-        </ul>
-      </nav>
-    </footer>
-  </body>
+    <section>
+      <canvas id="logoCanvas" width="200" height="200"></canvas>
+      <br>
+      <svg width="100" height="100">
+        <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+      </svg>
+      <script>
+        var canvas = document.getElementById('logoCanvas');
+        var context = canvas.getContext('2d');
+
+        context.font = '60px Arial';
+        context.fillStyle = '#800000';
+        context.fillText('B', 30, 70);
+        context.fillText('M', 100, 70); 
+      </script>
+    </section>
+  </main>
+
+  <hr />
+
+  <footer>
+    <p>Find me here:</p>
+    <aside id="social-footer">
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/">LinkedIn</a>
+        </li>
+        <li><a href="https://github.com/B1mendez">Github</a></li>
+      </ul>
+    </aside>
+  </footer>
+</body>
+
 </html>
