validator sanity check

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Brian's Porfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <style>
     * {
       border: 1px double black;
@@ -38,14 +38,12 @@
       <h2>About Me</h2>
       <pre>Brief description of who I am...</pre>
       <audio controls>
-        <source src='' type=''>
-        <source src='' type=''>
         Your browser does not support the audio tag.
       </audio>
 
       <div class="skill-category">
         <img src="frontend-dev-img.jpg" alt="Frontend development image">
-        <caption>Frontend Development</caption>
+        <h3>Frontend Development</h3>
         <p>Strong knowledge in HTML, CSS, JavaScript, and frontend frameworks like React and Vue. Experienced in
           building responsive and user-friendly interfaces, implementing complex features, and improving website
           performance.</p>
@@ -53,27 +51,27 @@
 
       <div class="skill-category">
         <img src="backend-dev-img.jpg" alt="Backend development image">
-        <caption>Backend Development</caption>
+        <h3>Backend Development</h3>
         <p>Proficient in Node.js, Express, and Python with Django. Able to design and implement APIs, manage databases,
           and build secure and scalable server-side applications.</p>
       </div>
 
       <div class="skill-category">
         <img src="software-apis-img.jpg" alt="Software and APIs image">
-        <caption>Software & APIs</caption>
+        <h3>Software & APIs</h3>
         <p>Experienced in integrating various APIs, utilizing cloud platforms, and working with software like Postman
           and Git.</p>
       </div>
 
       <div class="skill-category">
         <img src="soft-skills-img.jpg" alt="Soft skills image">
-        <caption>Soft Skills</caption>
+        <h3>Soft Skills</h3>
         <p>Effective communicator, great team player, and a strong problem solver. Comfortable working in agile
           development teams and handling multiple tasks and deadlines.</p>
       </div>
 
       <table>
-        <h3>Education and Experience</h3>
+        <caption>Education and Work Experience</caption>
         <colgroup>
           <col span="3" style="background-color:lightsteelblue">
         </colgroup>
