final validator check

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
 
     <section id="projects">
       <h2>My Projects</h2>
-      <video width="320" height="240" alt='Video Overview on Projects' controls>
-        <source src='' type=''>
-        <source src='' type=''>
+      <video width="320" height="240" controls>
         Your browser does not support the video tag.
       </video>
       <figure>
