--- a/index.html
+++ b/index.html
@@ -1,201 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Brian's Porfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto+Slab:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase&family=Molengo&family=Playfair+Display+SC&family=Roboto+Slab:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Brian's Porfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    * {
-      border: 1px double black;
-    }
-  </style>
-</head>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      * {
+        -border: 1px double black;
+      }
 
-<body>
-  <header>
-    <h1>Welcome to Brian's <i>Developer</i> Website</h1>
-    <nav id="global-header">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact Me</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="home">
-      <h2><code>Hello!</code>I'm Brian Mendez</h2>
-      <p>Introduction about you that hooks the audience...</p>
-      <img src="path_to_your_image" alt="A photo of Brian" />
-      <br>
-      <button>Contact Me</button>
-    </section>
+      h1 {
+        font-family: "Cormorant Unicase", serif;
+      }
 
-    <section id="about">
-      <h2>About Me</h2>
-      <pre>Brief description of who I am...</pre>
-      <audio controls>
-        Your browser does not support the audio tag.
-      </audio>
+      h2,
+      h3 {
+        font-family: "Playfair Display SC", serif;
+      }
 
-      <div class="skill-category">
-        <img src="frontend-dev-img.jpg" alt="Frontend development image">
-        <h3>Frontend Development</h3>
-        <p>Strong knowledge in HTML, CSS, JavaScript, and frontend frameworks like React and Vue. Experienced in
-          building responsive and user-friendly interfaces, implementing complex features, and improving website
-          performance.</p>
-      </div>
+      p {
+        font-family: "Roboto Slab", serif;
+      }
 
-      <div class="skill-category">
-        <img src="backend-dev-img.jpg" alt="Backend development image">
-        <h3>Backend Development</h3>
-        <p>Proficient in Node.js, Express, and Python with Django. Able to design and implement APIs, manage databases,
-          and build secure and scalable server-side applications.</p>
-      </div>
+      #global-header {
+        font-family: "Playfair Display SC", serif;
+        width: 100%;
+        display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-      <div class="skill-category">
-        <img src="software-apis-img.jpg" alt="Software and APIs image">
-        <h3>Software & APIs</h3>
-        <p>Experienced in integrating various APIs, utilizing cloud platforms, and working with software like Postman
-          and Git.</p>
-      </div>
+      #global-header h1 {
+        font-family: "Playfair Display SC", serif;
+        float: left;
+      }
 
-      <div class="skill-category">
-        <img src="soft-skills-img.jpg" alt="Soft skills image">
-        <h3>Soft Skills</h3>
-        <p>Effective communicator, great team player, and a strong problem solver. Comfortable working in agile
-          development teams and handling multiple tasks and deadlines.</p>
-      </div>
+      #global-header nav {
+        float: right;
+      }
+      #global-header ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        float: right;
+      }
 
-      <table>
-        <caption>Education and Work Experience</caption>
-        <colgroup>
-          <col span="3" style="background-color:lightsteelblue">
-        </colgroup>
-        <tr>
-          <th><b>2019</b></th>
-          <th><b>2021-2023</b></th>
-          <th><b>Present</b></th>
-        </tr>
-        <tr>
-          <td>El Camino Real Charter H.S <br> <em>Woodland Hills, CA</em></td>
-          <td>B.S, Electrical and Computer Engineering <br> <em>University of California, San Diego</em></td>
-          <td>Better Times Tutoring Inc.<br> <em>San Diego, CA</em></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Tree of Knowledge Tutoring Center<br><em>Mission Hills, CA</em></td>
-          <td></td>
-        </tr>
-      </table>
+      #global-header li {
+        vertical-align: middle;
+        float: left;
+      }
 
-      <details>
-        <summary>Why I do what I do?</summary>
-        <p>Creation, Building, and Exceeding</p>
-      </details>
-    </section>
+      #global-header li a {
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 12px 12px;
+        text-decoration: none;
+      }
 
-    <section id="projects">
-      <h2>My Projects</h2>
-      <video width="320" height="240" controls>
-        Your browser does not support the video tag.
-      </video>
-      <figure>
-        <h3>Better Times Tutoring</h3>
-        <iframe width="400" height="200" src="https://bettertimestutoring.com/"
-          title="Better Times Tutoring Website"></iframe>
-        <p>Project description...</p>
-        <button>Learn More</button>
-      </figure>
-      <template>
-        <h3>Project Name</h3>
-        <picture>
-          <source media="(min-width:650px)" srcset=''>
-          <source media="(min-width:465px)" srcset=''>
-          <img src='' alt='Project 2'>
-          <figcaption>Project 2</figcaption>
-        </picture>
-        <p>Project description...</p>
-        <button>Learn More</button>
-      </template>
-    </section>
+      #global-header li a:hover {
+        background-color: grey;
+      }
+    </style>
+  </head>
 
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <form>
-        <fieldset>
-          <legend>Reach Out:</legend>
-          <label for="fname">First name:</label>
-          <input type="text" id="fname" name="fname" /> <br> <br>
-          <label for="lname">Last name:</label>
-          <input type="text" id="lname" name="lname" /> <br> <br>
-          <input type="submit" value="Submit" />
-        </fieldset>
-      </form>
+  <body>
+    <header id="global-header">
+      <h1>Brian's <i>Developer</i> Website</h1>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="home">
+        <h2><code>Hello!</code>I'm Brian Mendez</h2>
+        <p>Web Developer maybe... problem solver definitely</p>
+        <p>Get things done the right way</p>
+        <img src="path_to_your_image" alt="A photo of Brian" />
+        <br />
+        <button>Contact Me</button>
+      </section>
 
-      <h2>Quick Question</h2>
-      <form>
-        <label for="inquiry">Type of Inquiry:</label>
-        <select id="inquiry" name="inquiry">
-          <optgroup label="Technical">
-            <option value="bug-report">Bug Report</option>
-            <option value="feature-request">Feature Request</option>
-          </optgroup>
-          <optgroup label="Non-Technical">
-            <option value="general-question">General Question</option>
-            <option value="career-opportunity">Career Opportunity</option>
-          </optgroup>
-        </select>
-        <br>
-        <textarea>Let me know here.</textarea>
-        <br>
-        <label for="lname">What browser are you viewinig this on: </label>
-          <input list="browsers" name="browser" id="browser"> <br> <br>
+      <section id="about">
+        <h2>About Me</h2>
+        <pre>Brief description of who I am...</pre>
+        <audio controls>Your browser does not support the audio tag.</audio>
+
+        <div class="skill-category">
+          <img src="frontend-dev-img.jpg" alt="Frontend development image" />
+          <h3>Frontend Development</h3>
+          <p>
+            Strong knowledge in HTML, CSS, JavaScript, and frontend frameworks
+            like React and Vue. Experienced in building responsive and
+            user-friendly interfaces, implementing complex features, and
+            improving website performance.
+          </p>
+        </div>
+
+        <div class="skill-category">
+          <img src="backend-dev-img.jpg" alt="Backend development image" />
+          <h3>Backend Development</h3>
+          <p>
+            Proficient in Node.js, Express, and Python with Django. Able to
+            design and implement APIs, manage databases, and build secure and
+            scalable server-side applications.
+          </p>
+        </div>
+
+        <div class="skill-category">
+          <img src="software-apis-img.jpg" alt="Software and APIs image" />
+          <h3>Software & APIs</h3>
+          <p>
+            Experienced in integrating various APIs, utilizing cloud platforms,
+            and working with software like Postman and Git.
+          </p>
+        </div>
+
+        <div class="skill-category">
+          <img src="soft-skills-img.jpg" alt="Soft skills image" />
+          <h3>Soft Skills</h3>
+          <p>
+            Effective communicator, great team player, and a strong problem
+            solver. Comfortable working in agile development teams and handling
+            multiple tasks and deadlines.
+          </p>
+        </div>
+
+        <table>
+          <caption>
+            Education and Work Experience
+          </caption>
+          <colgroup>
+            <col span="3" style="background-color: lightsteelblue" />
+          </colgroup>
+          <tr>
+            <th><b>2019</b></th>
+            <th><b>2021-2023</b></th>
+            <th><b>Present</b></th>
+          </tr>
+          <tr>
+            <td>
+              El Camino Real Charter H.S <br />
+              <em>Woodland Hills, CA</em>
+            </td>
+            <td>
+              B.S, Electrical and Computer Engineering <br />
+              <em>University of California, San Diego</em>
+            </td>
+            <td>
+              Better Times Tutoring Inc.<br />
+              <em>San Diego, CA</em>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              Tree of Knowledge Tutoring Center<br /><em>Mission Hills, CA</em>
+            </td>
+            <td></td>
+          </tr>
+        </table>
+
+        <details>
+          <summary>Why I do what I do?</summary>
+          <p>Creation, Building, and Exceeding</p>
+        </details>
+      </section>
+
+      <section id="projects">
+        <h2>My Projects</h2>
+        <video width="320" height="240" controls>
+          Your browser does not support the video tag.
+        </video>
+        <figure>
+          <h3>Better Times Tutoring</h3>
+          <iframe
+            width="400"
+            height="200"
+            src="https://bettertimestutoring.com/"
+            title="Better Times Tutoring Website"
+          ></iframe>
+          <p>Project description...</p>
+          <button>Learn More</button>
+        </figure>
+        <template>
+          <h3>Project Name</h3>
+          <picture>
+            <source media="(min-width:650px)" srcset="" />
+            <source media="(min-width:465px)" srcset="" />
+            <img src="" alt="Project 2" />
+            <figcaption>Project 2</figcaption>
+          </picture>
+          <p>Project description...</p>
+          <button>Learn More</button>
+        </template>
+      </section>
+
+      <section id="contact">
+        <h2>Contact Me</h2>
+        <form>
+          <fieldset>
+            <legend>Reach Out:</legend>
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname" /> <br />
+            <br />
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname" /> <br />
+            <br />
+            <input type="submit" value="Submit" />
+          </fieldset>
+        </form>
+
+        <h2>Quick Question</h2>
+        <form>
+          <label for="inquiry">Type of Inquiry:</label>
+          <select id="inquiry" name="inquiry">
+            <optgroup label="Technical">
+              <option value="bug-report">Bug Report</option>
+              <option value="feature-request">Feature Request</option>
+            </optgroup>
+            <optgroup label="Non-Technical">
+              <option value="general-question">General Question</option>
+              <option value="career-opportunity">Career Opportunity</option>
+            </optgroup>
+          </select>
+          <br />
+          <textarea>Let me know here.</textarea>
+          <br />
+          <label for="lname">What browser are you viewinig this on: </label>
+          <input list="browsers" name="browser" id="browser" /> <br />
+          <br />
           <datalist id="browsers">
-            <option value="Edge">
-            <option value="Firefox">
-            <option value="Chrome">
-            <option value="Opera">
-            <option value="Safari">
+            <option value="Edge"></option>
+            <option value="Firefox"></option>
+            <option value="Chrome"></option>
+            <option value="Opera"></option>
+            <option value="Safari"></option>
           </datalist>
+
           <input type="submit" value="Submit" />
-      </form>
-    </section>
+        </form>
+      </section>
 
-    <section>
-      <canvas id="logoCanvas" width="200" height="200"></canvas>
-      <br>
-      <svg width="100" height="100">
-        <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
-      </svg>
-      <script>
-        var canvas = document.getElementById('logoCanvas');
-        var context = canvas.getContext('2d');
+      <section>
+        <canvas id="logoCanvas" width="200" height="200"></canvas>
+        <br />
+        <svg width="100" height="100">
+          <circle
+            cx="50"
+            cy="50"
+            r="40"
+            stroke="black"
+            stroke-width="3"
+            fill="red"
+          />
+        </svg>
+        <script>
+          var canvas = document.getElementById("logoCanvas");
+          var context = canvas.getContext("2d");
 
-        context.font = '60px Arial';
-        context.fillStyle = '#800000';
-        context.fillText('B', 30, 70);
-        context.fillText('M', 100, 70); 
-      </script>
-    </section>
-  </main>
+          context.font = "60px Arial";
+          context.fillStyle = "#800000";
+          context.fillText("B", 30, 70);
+          context.fillText("M", 100, 70);
+        </script>
+      </section>
+    </main>
 
-  <hr />
+    <hr />
 
-  <footer>
-    <p>Find me here:</p>
-    <aside id="social-footer">
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/">LinkedIn</a>
-        </li>
-        <li><a href="https://github.com/B1mendez">Github</a></li>
-      </ul>
-    </aside>
-  </footer>
-</body>
-
+    <footer>
+      <p>Find me here:</p>
+      <aside id="social-footer">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/"
+              >LinkedIn</a
+            >
+          </li>
+          <li><a href="https://github.com/B1mendez">Github</a></li>
+        </ul>
+      </aside>
+    </footer>
+  </body>
 </html>
