--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
       * {
-        -border: 1px double black;
+        border: 1px double black;
       }
 
       h1 {
@@ -57,6 +57,7 @@
 
       #global-header nav {
         float: right;
+        display: flex;
       }
       #global-header ul {
         list-style-type: none;
@@ -82,6 +83,27 @@
       #global-header li a:hover {
         background-color: grey;
       }
+
+      #home {
+        display: flex;
+        justify-content: space-around; /* Centers the items horizontally */
+        align-items: center; /* Centers the items vertically */
+        gap: 20px; /* Provides space between the text-content and the image */
+      }
+
+      .text-content {
+        max-width: 45%; /* Adjust as needed */
+      }
+
+      #home img {
+        max-width: 45%; /* Adjust as needed */
+        object-fit: cover;
+      }
+
+      #home button {
+        display: block; /* This will make the button a block-level element, taking up its own line */
+        margin-top: 20px; /* Adds a bit of space above the button */
+      }
     </style>
   </head>
 
@@ -99,12 +121,13 @@
     </header>
     <main>
       <section id="home">
-        <h2><code>Hello!</code>I'm Brian Mendez</h2>
-        <p>Web Developer maybe... problem solver definitely</p>
-        <p>Get things done the right way</p>
+        <div class="text-content">
+          <h2><code>Hello!</code>I'm Brian Mendez</h2>
+          <p>Web Developer maybe... problem solver definitely</p>
+          <p>Get things done the right way</p>
+          <button>Contact Me</button>
+        </div>
         <img src="path_to_your_image" alt="A photo of Brian" />
-        <br />
-        <button>Contact Me</button>
       </section>
 
       <section id="about">
