update styles folder

--- a/index.html
+++ b/index.html
@@ -5,416 +5,7 @@
   <meta charset="UTF-8" />
   <title>Brian's Porfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto+Slab:wght@300&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase&family=Molengo&family=Playfair+Display+SC&family=Roboto+Slab:wght@300&display=swap"
-    rel="stylesheet" />
-
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    :root {
-      --dark-color: #555A54;
-      --background-color: #BFBBAF;
-      --creme-color: #F7F2EF;
-      --grey-color: #E1DDD2;
-    }
-
-    * {
-      -border: 1px double black;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      background-color: var(--creme-color);
-
-    }
-
-    h1 {
-      font-family: "Cormorant Unicase", serif;
-    }
-
-    h2,
-    h3 {
-      font-family: "Playfair Display SC", serif;
-      text-align: center;
-    }
-
-    p {
-      font-family: "Roboto Slab", serif;
-    }
-
-    #global-header {
-      font-family: "Playfair Display SC", serif;
-      width: 100%;
-      display: inline-flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: var(--dark-color);
-      padding-left: 20px;
-      padding-right: 20px;
-    }
-
-    #global-header h1 {
-      font-family: "Playfair Display SC", serif;
-      float: left;
-      color: var(--creme-color);
-      font: italic;
-    }
-
-    #global-header nav {
-      float: right;
-      display: flex;
-      padding-right: 40px;
-    }
-
-    #global-header ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      float: right;
-    }
-
-    #global-header li {
-      vertical-align: middle;
-      float: left;
-    }
-
-    #global-header li a {
-      display: block;
-      color: black;
-      text-align: center;
-      padding: 12px 12px;
-      text-decoration: none;
-    }
-
-    #global-header li a:hover {
-      background-color: grey;
-    }
-
-    .home {
-      height: 90vh;
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      gap: 20px;
-      padding-bottom: 5vh;
-    }
-
-    #landingPage-content {
-      max-width: 45%;
-      text-align: left;
-    }
-
-    .home img {
-      max-height: 80vh;
-      max-width: 45vw;
-      border-radius: 20%;
-      border: 0.5vw solid var(--dark-black);
-      margin: 1.0vh 1.0vw 1.0vh 1.0vw;
-      object-fit: contain;
-    }
-
-    #landingPage-content h2 {
-      padding: 30px 0;
-      text-align: left;
-    }
-
-    #landingPage-content p {
-      padding: 10px 0;
-    }
-
-    #landingPage-content button {
-      position: relative;
-      width: 130px;
-      height: 40px;
-      line-height: 42px;
-      padding: 0;
-      border: none;
-      background: rgb(255, 27, 0);
-      background: linear-gradient(0deg, rgba(255, 27, 0, 1) 0%, rgba(251, 75, 2, 1) 100%);
-
-    }
-
-    #landingPage-content button:hover {
-      color: #f0094a;
-      background: transparent;
-      box-shadow: none;
-    }
-
-    #landingPage-content button:before,
-    #landingPage-content button:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      height: 2px;
-      width: 0;
-      background: #f0094a;
-      box-shadow:
-        -1px -1px 5px 0px #fff,
-        7px 7px 20px 0px #0003,
-        4px 4px 5px 0px #0002;
-      transition: 400ms ease all;
-    }
-
-    #landingPage-content button:after {
-      right: inherit;
-      top: inherit;
-      left: 0;
-      bottom: 0;
-    }
-
-    #landingPage-content button:hover:before,
-    #landingPage-content button:hover:after {
-      width: 100%;
-      transition: 800ms ease all;
-    }
-
-    #about {
-      height: 100vh;
-      width: 100%;
-      align-items: center;
-      padding: 0 2% 0 2%;
-
-    }
-
-    #skills-section {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 15px;
-      margin-bottom: 200px;
-    }
-
-    .skill-category {
-      background: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      border-radius: 4px;
-      padding: 20px;
-      transition: all .3s ease-in;
-    }
-
-    .skill-category>* {
-      padding: 10px;
-    }
-
-    .skill-category img {
-      width: 100%;
-      height: 80%;
-      object-fit: cover;
-    }
-
-    .skill-category h3 {
-      padding: 20px 10px;
-      font-size: 1.5rem;
-    }
-
-    .skill-category p {
-      line-height: 20px;
-      font-size: 400;
-    }
-
-    /* .skill-category:hover {
-      background: blue;
-      color: #fff;
-      box-shadow: 0px 0px 11px 5px #000000;
-
-    } */
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      text-align: left;
-      margin: auto;
-    }
-
-    caption {
-      text-align: center;
-      font-size: 2em;
-      margin: 20px 0;
-      font-weight: bold;
-    }
-
-    th,
-    td {
-      padding: 20px;
-      vertical-align: top;
-    }
-
-    colgroup col {
-      width: 33.33%;
-    }
-
-    form {
-      position: relative;
-      width: 500px;
-      margin: 50px auto 100px auto;
-    }
-
-    input {
-      font-family: 'Lato', sans-serif;
-      font-size: 0.875em;
-      width: 470px;
-      height: 50px;
-      padding: 0px 15px 0px 15px;
-
-      background: transparent;
-      outline: none;
-      color: #726659;
-
-      border: solid 1px #b3aca7;
-      border-bottom: none;
-
-      transition: all 0.3s ease-in-out;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -ms-transition: all 0.3s ease-in-out;
-    }
-
-    input:hover {
-      background: #b3aca7;
-      color: #e2dedb;
-    }
-
-    textarea {
-      width: 470px;
-      max-width: 470px;
-      height: 110px;
-      max-height: 110px;
-      padding: 15px;
-
-      background: transparent;
-      outline: none;
-
-      color: #726659;
-      font-family: 'Lato', sans-serif;
-      font-size: 0.875em;
-
-      border: solid 1px #b3aca7;
-
-      transition: all 0.3s ease-in-out;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -ms-transition: all 0.3s ease-in-out;
-    }
-
-    textarea:hover {
-      background: #b3aca7;
-      color: #e2dedb;
-    }
-
-    #submit {
-      width: 502px;
-
-      padding: 0;
-      margin: -5px 0px 0px 0px;
-
-      font-family: 'Lato', sans-serif;
-      font-size: 0.875em;
-      color: #b3aca7;
-
-      outline: none;
-      cursor: pointer;
-
-      border: solid 1px #b3aca7;
-      border-top: none;
-    }
-
-    #submit:hover {
-      color: #e2dedb;
-    }
-
-    #projects {
-      height: 100vh;
-      width: 100%;
-      padding: 50px;
-    }
-
-    .projects {
-      display: flex;
-      align-items: center;
-      max-width: 90rem;
-      margin: auto;
-      background-color: #fff;
-      padding: 2.5rem;
-      box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, 0.2);
-      border-radius: 0.8rem;
-    }
-
-    .project-pic {
-      position: relative;
-      min-width: 35rem;
-      max-width: 35em;
-      height: 30rem;
-      transform: translate(-8rem);
-    }
-
-    .project-pic img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 0.8rem;
-    }
-
-    .project-pic::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-      box-shadow: 0.5rem 0.5rem 3rem 1px rgba(0, 0, 0, 0.05);
-      border-radius: 0.8rem;
-      opacity: 0.5;
-    }
-
-    .project-date span {
-      display: block;
-      color: #8e8C8C;
-      font-weight: 600;
-      margin: 0.5rem 0;
-    }
-
-    .project-title {
-      font-size: 2.5rem;
-      margin: 1.5rem 0 2rem;
-      text-transform: uppercase;
-      color: #4facfe;
-      text-align: left;
-    }
-
-    .project-info p {
-      margin-bottom: 3rem;
-      color: rgba(0, 0, 0, 0.7);
-    }
-
-    .project-link {
-      display: inline-block;
-      background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-      padding: 1rem 1.5rem;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      color: #fff;
-      border-radius: 0.8rem;
-    }
-
-    .project-link:hover {
-      background-image: linear-gradient (to right,
-          #00f2fe 0%, #4facfe 100%);
-    }
-  </style>
+  <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 
 <body>
