--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Brian's Porfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/styles.css" />
+  <script src="https://kit.fontawesome.com/5b4b3e0211.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -152,16 +153,15 @@
 
   <hr />
 
-  <footer>
-    <p>Find me here:</p>
-    <aside id="social-footer">
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/">LinkedIn</a>
-        </li>
-        <li><a href="https://github.com/B1mendez">Github</a></li>
-      </ul>
-    </aside>
+  <footer class="footer">
+    <div id="copyright">
+      <span>© 2023 All rights reserved </span>
+      <a>License</a>
+    </div>
+    <div id="footer-links">
+      <a href="https://www.github/b1mendez" class="fa-brands fa-github">Github</a>
+      <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/"class="fa-brands fa-linkedin">LinkedIn</a>
+    </div>
   </footer>
 </body>
 
