fixing style issues

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <main>
     <section class="home">
       <div id="landingPage-content">
-        <h2>Hello! I'm Brian Mendez</h2>
+        <h2><strong>Hello! I'm Brian Mendez</strong></h2>
         <p>Web Developer maybe... problem solver definitely</p>
-        <p>Get things done the right way</p>
+        <p>I majored in Electrical and Computer Engineering but have built a passion in Software Engineering and Web Development.</p>
         <button>Contact Me</button>
       </div>
       <img src="/images/brian.jpg" alt="A photo of Brian" />
@@ -115,26 +115,22 @@
       </table>
     </section>
 
-    <section id="projects">
+    <section class="projects">
       <h2>Projects</h2>
-      <div class="projects">
-        <div class="project-pic">
+      <article class="project-container">
+        <div class="project-img">
           <picture>
-            <!-- <source media="(min-width:650px)" srcset="/images/logo.PNG" />
-            <source media="(min-width:465px)" srcset="/images/logo.PNG" /> -->
-            <img src="/images/logo.PNG" alt="Better Times Tutoring" />
+            <img src="/images/logo.PNG" alt="Better Times Tutoring Logo">
           </picture>
         </div>
         <div class="project-info">
-          <div class="project-date">
-            <span>2022-Present</span>
-          </div>
           <h2 class="project-title">Better Times Tutoring</h2>
+          <h3>2022-Present</h3>
           <p>A tutoring website that offers a variety of academic resources and services to enhance student success and
             achievement.</p>
-          <a class="https://bettertimestutoring.com/" href="better-times-tutoring.html">Learn More</a>
+          <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a>
         </div>
-      </div>
+      </article>
     </section>
 
     <section id="contact">
