--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </table>
       </section>
 
-      <section class="projects">
+      <section id="projects">
         <h2>Projects</h2>
         <article class="project-container">
           <div class="project-img">
@@ -138,7 +138,7 @@
         </article>
       </section>
 
-      <section class="contact">
+      <section id="contact">
         <form>
           <h2>Contact Me</h2>
           <hr>
